# ASCII-Renderer

./: .gitignore  CMakeLists.txt
ASCII-Renderer/: CMakeLists.txt
ASCII-Renderer/src/: ASCIIRenderer.cpp  main.cpp
data/: headcrab_classic.dae
src/: main.cpp
